# multi_legged_control

./: .gitmodules  LICENSE  README.md
multi_controllers/: CMakeLists.txt  multi_controllers_plugins.xml  package.xml
multi_controllers/config/: controllers.yaml
multi_controllers/include/: MultiController.h  MultiLeggedController.h  MultiLeggedInterface.h  MultiModelSettings.h
multi_controllers/launch/: load_controller.launch  service_call.launch
multi_controllers/src/: CmdPublisher.cpp  GaitCommandNode.cpp  MultiController.cpp  MultiLeggedController.cpp  move_box.cpp
multi_legged_controllers/: CMakeLists.txt  cmdvel_publisher.py  multi_legged_controllers_plugins.xml  package.xml
multi_legged_controllers/config/: controllers.yaml  rviz.rviz
multi_legged_controllers/config/aliengo/: reference.info  task.info
multi_legged_controllers/include/multi_legged_controllers/: MRA_WBC.h  ModifiedPerceptiveLeggedReferenceManager.h  MultiLeggedController.h  MultiLeggedInterface.h  PlanarTerrainReceiver.h
multi_legged_controllers/include/multi_legged_controllers/legged_estimation/: ModifiedLinearKalmanFilter.h  ModifiedStateEstimateBase.h
multi_legged_controllers/include/multi_legged_controllers/visualization/: FootPlacementVisualization.h  LeggedRobotVisualizer.h  ModifiedLeggedRobotVisualizer.h  SphereVisualization.h
multi_legged_controllers/launch/: elevation_mapping.launch  elevation_mapping_fixed.launch  elevation_mapping_fixed_demo.launch  load_controller.launch  load_robot_parameter.launch  rviz.launch  service_call.launch  world_with_two_robots.launch
multi_legged_controllers/launch/worlds/: obstacle.world  obstacle_course.world  slope_stepping_stone.world  stairs_stepping_stone.world  stepping_stone_only.world
multi_legged_controllers/scripts/: generate_urdf.sh
multi_legged_controllers/src/: MRA_WBC.cpp  MultiLeggedController.cpp  bagfile_recorder.cpp
multi_legged_controllers/src/command_publishers/: cmdvel_publisher.py  goal_publisher.py  mode_publisher.py
multi_legged_controllers/src/legged_estimation/: ModifiedLinearKalmanFilter.cpp  ModifiedStateEstimateBase.cpp
multi_legged_controllers/src/visualization/: FootPlacementVisualization.cpp  ModifiedLeggedRobotVisualizer.cpp  SphereVisualization.cpp
multi_legged_controllers/urdf/: connected_robot.xacro  leg_with_ns.xacro  robot_macro.xacro  robot_with_prefix.xacro  rod_with_joints.xacro  rod_with_joints_macro.xacro  spherical_joint.xacro
planner/: CMakeLists.txt  package.xml
planner/config/: task.info
planner/config/multiplot/: mpc_observation.xml
planner/include/planner/: LowPassFilter.h  ObjectBoundConstraint.h  ObjectCBFConstraint.h  ObjectInterface.h  Obstacles.h  Robot1CBFConstraint.h  Robot2CBFConstraint.h  definitions.h  package_path.h.in
planner/include/planner/CBFs/: ObjectCBFConstraint.h
planner/include/planner/dynamics/: ObjectSystemDynamics.h
planner/src/: ObjectInterface.cpp
planner_ros/: CMakeLists.txt  package.xml
planner_ros/include/planner_ros/: ObjectDummyVisualization.h  ObjectVisualization.h  ObstacleVisualization.h  PlannerInterface.h  StateEstimation.h
planner_ros/launch/: multiplot.launch  planner.launch
planner_ros/src/: ObjectDummyVisualization.cpp  ObjectMpcNode.cpp  ObjectMrtNode.cpp  ObjectVisualization.cpp  TargetPoseCommand.cpp  bagfile_recorder.cpp
scripts/: rviz.yaml  simulation.yaml  simulation_2.yaml  simulation_flat.yaml  simulation_without_payload.yaml
unitree_description/: package.xml
unitree_description/config/: gazebo.yaml
unitree_description/launch/: gazebo_world.launch
unitree_description/urdf/: robot.xacro
unitree_description/urdf/a1/: gazebo.xacro
unitree_description/urdf/aliengo/: gazebo.xacro
