<?xml version="1.0"?>
<package format="2">
    <name>multi_controllers</name>
    <version>0.0.0</version>
    <description>legged_perceptive_controllers</description>
    <maintainer email="somboles@usc.edu">Mohsen Sombolestan</maintainer>

    <license>BSD</license>
    <author email="somboles@usc.edu">Mohsen Sombolestan</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>legged_controllers</depend>
    <depend>loco_manipulation_interface</depend>
    <depend>fieldai_legged_perceptive_controllers</depend>

    <export>
        <controller_interface plugin="${prefix}/multi_controllers_plugins.xml"/>
    </export>
</package>
