<?xml version="1.0"?>
<package format="2">
  <name>planner_ros</name>
  <version>0.0.0</version>
  <description>The planner_ros package</description>

  <maintainer email="somboles@usc.edu">Mohsen Sombolestan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib </build_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>planner</depend>
  <depend>robot_state_publisher</depend>
  <depend>ocs2_robotic_assets</depend>
  <depend>gazebo_dev</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
  <depend>grid_map_msgs</depend>
  
</package>
